# State-Vector-Simulator

./: .gitignore  .pre-commit-config.yaml  PRESENTATION.pptx  README.md  challenge.sh  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
QCP/circuits/: solution_benchmark.json
QCP/circuits/benchmarks/: bernstein_1024.qcp  bernstein_16.qcp  bernstein_64.qcp  find_period_2_x_mod_15.qcp  find_period_2_x_mod_15_noccx.qcp  find_period_2_x_mod_21.qasm  find_period_2_x_mod_21_noccx.qcp  grover_n10.qcp  grover_n10_noccx.qcp  grover_n3.qcp  grover_n3_clifford_t.qcp  grover_n3_noccx.qcp  grover_n5.qcp  grover_n5_clifford_t.qcp  haar_random_n20_d10.qcp  haar_random_n20_d10_clifford_t_r1.qcp  haar_random_n20_d10_noccx.qcp  haar_random_n5_d3.qcp  haar_random_n5_d3_clifford_t_r1.qcp  haar_random_n5_d3_noccx.qcp
QCP/circuits/test/: cx-cx.qcp  cx.qcp  h-h.qcp  h.qcp  h_i-cx.qcp  h_i.qcp  i.qcp  measure.qcp  phasedxz_as_x.qcp  phasedxz_as_z.qcp  rcx-rcx.qcp  rcx.qcp  rx0.qcp  rx180.qcp  rx270.qcp  rx90.qcp  ry0.qcp  ry180.qcp  ry270.qcp  ry90.qcp  rz0.qcp  rz180.qcp  rz270.qcp  rz90.qcp  s.qcp  sdg.qcp  sqrt_iswap.qcp  t.qcp  tdg.qcp  test.qcp  x-x.qcp  x.qcp  x_x_i.qcp  y-y.qcp  y.qcp  z-z.qcp  z.qcp
QCP/parser/: parseQCP.py
QCP/template/: apply_gate.pyx  benchmark.py  constants.py  dmtemplate.py  svtemplate.py  xeb.py
QCP/template/utils/: equivalence_testing.py  files.py  n_weighted_coinflip.py  visualization.py
tests/: test_template.py
